config/manifests/gatekeeper/approved-registries-template.yaml
# Copyright 2024 Stellar-K8s Contributors
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: approvedregistries
spec:
  crd:
    spec:
      names:
        kind: ApprovedRegistries
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowed_registries:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package approvedregistries

        violation[{"msg": msg}] {
          count(input.parameters.allowed_registries) == 0
          name := input.review.object.metadata.name
          msg := sprintf("StellarNode '%s' image registry '%s' is not in the approved list: %v", [name, input.review.object.spec.version, input.parameters.allowed_registries])
        }

        violation[{"msg": msg}] {
          count(input.parameters.allowed_registries) > 0
          version := input.review.object.spec.version
          name := input.review.object.metadata.name
          not any_registry_matches(version, input.parameters.allowed_registries)
          msg := sprintf("StellarNode '%s' image registry '%s' is not in the approved list: %v", [name, version, input.parameters.allowed_registries])
        }

        any_registry_matches(version, registries) {
          registry := registries[_]
          startswith(version, registry)
        }
